--- a/.github/workflows/soaking.yml
+++ b/.github/workflows/soaking.yml
@@ -133,6 +133,17 @@ jobs:
           aws-region: ${{ env.AWS_DEFAULT_REGION }}
           # Default session duration is 1 hour with OIDC.
           role-duration-seconds: 14400 # 4 hours
+           python-version: '3.x'
+      - name: Cache (Python)
+        uses: actions/cache@v3
+        if: ${{ matrix.language == 'python' }}
+        with:
+          path: |
+            ~/go/pkg/mod
+            ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}-go-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
       - name: Patch ADOT
         run: ./patch-upstream.sh
       # Login to ECR since may be needed for Python build image.
