--- a/.github/workflows/soaking.yml
+++ b/.github/workflows/soaking.yml
@@ -311,7 +311,7 @@ jobs:
             echo '${{ toJSON(needs.soaking-test.outputs) }}' |
             jq -r '."${{ matrix.language }}-${{ matrix.instrumentation-type }}-version"'
           )
-          echo "::warning::Layer ARN Keyword: arn:aws:lambda:${{ env.AWS_DEFAULT_REGION }}:611364707713:layer:aws-otel-${{ matrix.language }}-${{ matrix.instrumentation-type }}-<ARCHITECTURE>-${{ github.sha }}:$VERSION"
+          echo "::warning::Layer ARN Keyword: arn:aws:lambda:${{ env.AWS_DEFAULT_REGION }}:611364707713:layer:aws-otel-${{ matrix.language }}-${{ matrix.instrumentation-type }}-${{ github.sha }}:$VERSION"
           aws dynamodb put-item --table-name aws-otel-lambda-soak-tests --item '{"SHA-SDK": {"S": "aws-otel-${{ matrix.language }}-${{ matrix.instrumentation-type }}-<ARCHITECTURE>-${{ github.sha }}"}, "ARN": {"S": "arn:aws:lambda:${{ env.AWS_DEFAULT_REGION }}:611364707713:layer:aws-otel-${{ matrix.language }}-${{ matrix.instrumentation-type }}-<ARCHITECTURE>-${{ github.sha }}:$VERSION"}}'
 
   publish-soaking-status:
